syntax = "proto3";
option go_package = "github.com/argoproj/argo/server/info";

import "google/api/annotations.proto";

package info;

message GetInfoRequest {
}
message InfoResponse {
    string managedNamespace = 1;
}

service InfoService {
    rpc GetInfo (GetInfoRequest) returns (InfoResponse) {
        option (google.api.http).get = "/api/v1/info";
    }
}